--- a/VRChat/16/1299116.html
+++ b/VRChat/16/1299116.html
@@ -102,7 +102,7 @@
     <script src=
     "https://asset.booth.pm/assets/d2e94950d96d598db0fd.js" defer=
     "defer" nonce=
-    "JeqsUi7Ug4N0uZKl3z/ckB5dFO/Oromtx3wZ1XN8p9c="></script>
+    "dvG0C/Wa1oi8cFNdYl/XPbzQxaUJ1XIEnUtYTxdVqNY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"アレッガ自叙伝 ～僕が蕎麦屋の戦闘機になったわけ～","description":"～更新～\nもう4年経ったので無料になりました！\n\nそれ以降のモデリング周りのお話はこちらをどうぞ↓\nウォーパルド航空開発研究所戦闘機開発カタログ\nhttps://ymz80a.booth.pm/items/931983\n\n\nアレッガの技術屋さんが蕎麦屋従業員になった経緯や\nそもそもシューティングゲームに興味を持ったかつらつらと書かれた書籍。\n内容はマッハ新書に近く、自叙伝にも近い。そんなフランクな読み物です。\n\n全13ページ　9749文字","url":"https://booth.pm/ja/items/1299116","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/68ed4d6d-87a6-44fe-a992-b3aec5be9769/i/1299116/555ae19e-e8ed-4882-9ef6-4a75dac92645_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JeqsUi7Ug4N0uZKl3z/ckB5dFO/Oromtx3wZ1XN8p9c="></script>
+    nonce="dvG0C/Wa1oi8cFNdYl/XPbzQxaUJ1XIEnUtYTxdVqNY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -631,7 +631,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;コスホリック34&quot;,&quot;value&quot;:&quot;cosholic34&quot;},{&quot;label&quot;:&quot;COMIC CITY SPARK 17&quot;,&quot;value&quot;:&quot;comiccity-spark17&quot;},{&quot;label&quot;:&quot;1218#エアブーSPARK+DRF2022&quot;,&quot;value&quot;:&quot;air-boo-1218&quot;},{&quot;label&quot;:&quot;Dozen Rose Fes.2022&quot;,&quot;value&quot;:&quot;dozenrosefes2022&quot;},{&quot;label&quot;:&quot;I・Doll VOL.66&quot;,&quot;value&quot;:&quot;i-doll66&quot;},{&quot;label&quot;:&quot;バーチャルマーケット2022 Winter Next Journey&quot;,&quot;value&quot;:&quot;virtualmarket2022winter&quot;},{&quot;label&quot;:&quot;COMITIA142&quot;,&quot;value&quot;:&quot;comitia142&quot;},{&quot;label&quot;:&quot;立体乱舞3&quot;,&quot;value&quot;:&quot;rittairanbu3&quot;},{&quot;label&quot;:&quot;第七回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku7&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.56&quot;,&quot;value&quot;:&quot;designfesta56&quot;}]"
+    "[{&quot;label&quot;:&quot;コスホリック34&quot;,&quot;value&quot;:&quot;cosholic34&quot;},{&quot;label&quot;:&quot;COMIC CITY SPARK 17&quot;,&quot;value&quot;:&quot;comiccity-spark17&quot;},{&quot;label&quot;:&quot;ドールズ・パーティー48&quot;,&quot;value&quot;:&quot;dollsparty48&quot;},{&quot;label&quot;:&quot;1218#エアブーSPARK+DRF2022&quot;,&quot;value&quot;:&quot;air-boo-1218&quot;},{&quot;label&quot;:&quot;Dozen Rose Fes.2022&quot;,&quot;value&quot;:&quot;dozenrosefes2022&quot;},{&quot;label&quot;:&quot;I・Doll VOL.66&quot;,&quot;value&quot;:&quot;i-doll66&quot;},{&quot;label&quot;:&quot;バーチャルマーケット2022 Winter Next Journey&quot;,&quot;value&quot;:&quot;virtualmarket2022winter&quot;},{&quot;label&quot;:&quot;COMITIA142&quot;,&quot;value&quot;:&quot;comitia142&quot;},{&quot;label&quot;:&quot;立体乱舞3&quot;,&quot;value&quot;:&quot;rittairanbu3&quot;},{&quot;label&quot;:&quot;第七回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku7&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
